pkl-core/src/test/files/LanguageSnippetTests/input/errors/analyzeImportsInvalidGlob.pkl
import "pkl:analyze"
import "pkl:reflect"
import ".../input-helper/analyze/invalidGlob.pkl"

res = analyze.importGraph(Set(reflect.Module(invalidGlob).uri))
